# pgrun

./: .gitignore  README.md  config.yml  pyproject.toml
pgrun/: query.py
pgrun/database/: connection.py  query.py
pgrun/model/: database.py  result.py
